azure-rg-deploy-scripts/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_myVM_name": {
            "defaultValue": "myVM",
            "type": "String"
        },
        "virtualNetworks_myVMVNET_name": {
            "defaultValue": "myVMVNET",
            "type": "String"
        },
        "networkInterfaces_myVMVMNic_name": {
            "defaultValue": "myVMVMNic",
            "type": "String"
        },
        "networkSecurityGroups_myVMNSG_name": {
            "defaultValue": "myVMNSG",
            "type": "String"
        },
        "publicIPAddresses_myVMPublicIP_name": {
            "defaultValue": "myVMPublicIP",
            "type": "String"
        },
        "images_myVM_image_20180218132726_name": {
            "defaultValue": "myVM-image-20180218132726",
            "type": "String"
        },
        "subnets_myVMSubnet_name": {
            "defaultValue": "myVMSubnet",
            "type": "String"
        },
        "extensions_enablevmaccess_name": {
            "defaultValue": "enablevmaccess",
            "type": "String"
        },
        "securityRules_rdp_name": {
            "defaultValue": "rdp",
            "type": "String"
        },
        "securityRules_open_port_80_name": {
            "defaultValue": "open-port-80",
            "type": "String"
        },
        "images_myVM_image_20180218132726_id": {
            "defaultValue": "/subscriptions/6e1349e1-005a-44ba-8190-1013f89aab24/resourceGroups/rg-nsbe-cs/providers/Microsoft.Compute/disks/myVM_OsDisk_1_a28b9a8bbae6495d8a248a875ed4c780",
            "type": "String"
        },
        "virtualMachines_myVM_id": {
            "defaultValue": "/subscriptions/6e1349e1-005a-44ba-8190-1013f89aab24/resourceGroups/rg-nsbe-cs/providers/Microsoft.Compute/disks/myVM_OsDisk_1_a28b9a8bbae6495d8a248a875ed4c780",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/6e1349e1-005a-44ba-8190-1013f89aab24/resourceGroups/rg-nsbe-cs/providers/Microsoft.Compute/images/myVM-image-20180218132726'.",
            "type": "Microsoft.Compute/images",
            "name": "[parameters('images_myVM_image_20180218132726_name')]",
            "apiVersion": "2017-03-30",
            "location": "westus",
            "scale": null,
            "properties": {
                "sourceVirtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_myVM_name'))]"
                },
                "storageProfile": {
                    "osDisk": {
                        "osType": "Windows",
                        "osState": "Generalized",
                        "diskSizeGB": 128,
                        "managedDisk": {
                            "id": "[parameters('images_myVM_image_20180218132726_id')]"
                        },
                        "caching": "ReadWrite",
                        "storageAccountType": "Standard_LRS"
                    },
                    "dataDisks": []
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_myVM_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/6e1349e1-005a-44ba-8190-1013f89aab24/resourceGroups/rg-nsbe-cs/providers/Microsoft.Compute/virtualMachines/myVM'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_myVM_name')]",
            "apiVersion": "2017-03-30",
            "location": "westus",
            "tags": {},
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(parameters('virtualMachines_myVM_name'),'_OsDisk_1_a28b9a8bbae6495d8a248a875ed4c780')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "id": "[parameters('virtualMachines_myVM_id')]"
                        }
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_myVM_name')]",
                    "adminUsername": "azureuser",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_myVMVMNic_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_myVMVMNic_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/6e1349e1-005a-44ba-8190-1013f89aab24/resourceGroups/rg-nsbe-cs/providers/Microsoft.Network/networkInterfaces/myVMVMNic'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_myVMVMNic_name')]",
            "apiVersion": "2017-10-01",
            "location": "westus",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "171dd3db-f632-4645-9c3d-ae460b48954f",
                "ipConfigurations": [
                    {
                        "name": "ipconfigmyVM",
                        "etag": "W/\"91618a7f-fd28-4930-8125-58920bc9eaec\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_myVMPublicIP_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_myVMVNET_name'), parameters('subnets_myVMSubnet_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_myVMNSG_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_myVM_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_myVMPublicIP_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_myVMVNET_name'), parameters('subnets_myVMSubnet_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_myVMNSG_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_myVM_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/6e1349e1-005a-44ba-8190-1013f89aab24/resourceGroups/rg-nsbe-cs/providers/Microsoft.Network/networkSecurityGroups/myVMNSG'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_myVMNSG_name')]",
            "apiVersion": "2017-10-01",
            "location": "westus",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "1adea0e3-4779-400b-b869-65870deac801",
                "securityRules": [
                    {
                        "name": "rdp",
                        "etag": "W/\"86e90972-dc9e-4028-83ff-7270828c9ad1\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "open-port-80",
                        "etag": "W/\"86e90972-dc9e-4028-83ff-7270828c9ad1\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 900,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"86e90972-dc9e-4028-83ff-7270828c9ad1\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"86e90972-dc9e-4028-83ff-7270828c9ad1\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"86e90972-dc9e-4028-83ff-7270828c9ad1\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"86e90972-dc9e-4028-83ff-7270828c9ad1\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"86e90972-dc9e-4028-83ff-7270828c9ad1\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"86e90972-dc9e-4028-83ff-7270828c9ad1\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/6e1349e1-005a-44ba-8190-1013f89aab24/resourceGroups/rg-nsbe-cs/providers/Microsoft.Network/publicIPAddresses/myVMPublicIP'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic"
            },
            "name": "[parameters('publicIPAddresses_myVMPublicIP_name')]",
            "apiVersion": "2017-10-01",
            "location": "westus",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "2489f0c9-5ffd-4fdd-a2d9-8f16bc76cf61",
                "ipAddress": "104.40.50.176",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "nsbecs",
                    "fqdn": "nsbecs.westus.cloudapp.azure.com"
                }
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/6e1349e1-005a-44ba-8190-1013f89aab24/resourceGroups/rg-nsbe-cs/providers/Microsoft.Network/virtualNetworks/myVMVNET'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_myVMVNET_name')]",
            "apiVersion": "2017-10-01",
            "location": "westus",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "eed01058-3dfe-412a-9a0f-a5c9d0fd5839",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "myVMSubnet",
                        "etag": "W/\"dacd4e16-343c-4a48-80d1-144a8d6a2a33\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.0.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/6e1349e1-005a-44ba-8190-1013f89aab24/resourceGroups/rg-nsbe-cs/providers/Microsoft.Compute/virtualMachines/myVM/extensions/enablevmaccess'.",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('virtualMachines_myVM_name'), '/', parameters('extensions_enablevmaccess_name'))]",
            "apiVersion": "2017-03-30",
            "location": "westus",
            "scale": null,
            "properties": {
                "publisher": "Microsoft.Compute",
                "type": "VMAccessAgent",
                "typeHandlerVersion": "2.0",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "UserName": "tchalla"
                },
                "protectedSettings": {}
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_myVM_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/6e1349e1-005a-44ba-8190-1013f89aab24/resourceGroups/rg-nsbe-cs/providers/Microsoft.Network/networkSecurityGroups/myVMNSG/securityRules/rdp'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_myVMNSG_name'), '/', parameters('securityRules_rdp_name'))]",
            "apiVersion": "2017-10-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_myVMNSG_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/6e1349e1-005a-44ba-8190-1013f89aab24/resourceGroups/rg-nsbe-cs/providers/Microsoft.Network/networkSecurityGroups/myVMNSG/securityRules/open-port-80'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_myVMNSG_name'), '/', parameters('securityRules_open_port_80_name'))]",
            "apiVersion": "2017-10-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 900,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_myVMNSG_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/6e1349e1-005a-44ba-8190-1013f89aab24/resourceGroups/rg-nsbe-cs/providers/Microsoft.Network/virtualNetworks/myVMVNET/subnets/myVMSubnet'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_myVMVNET_name'), '/', parameters('subnets_myVMSubnet_name'))]",
            "apiVersion": "2017-10-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_myVMVNET_name'))]"
            ]
        }
    ]
}
